fixed z-index so blog is clickable

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -257,6 +257,7 @@
         position: absolute;
         float: left;
         width: 25%;
+        z-index: 1;
     }
 
     .row {
